--- a/EagleSocial/NewsFeedTableViewCell.xib
+++ b/EagleSocial/NewsFeedTableViewCell.xib
@@ -13,11 +13,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleAspectFit" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCell" rowHeight="141" id="KGk-i7-Jjw" customClass="NewsFeedTableViewCell" customModule="EagleSocial" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="141"/>
+        <tableViewCell contentMode="scaleAspectFit" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCell" rowHeight="169" id="KGk-i7-Jjw" customClass="NewsFeedTableViewCell" customModule="EagleSocial" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="169"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="140.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="168.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fQf-Tj-3kw">
@@ -34,7 +34,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yui-Ao-wch">
-                        <rect key="frame" x="84" y="40" width="206" height="43"/>
+                        <rect key="frame" x="84" y="40" width="206" height="20.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="206" id="eo5-qH-IDO"/>
                         </constraints>
@@ -43,13 +43,13 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kW9-xb-YxO" userLabel="Button View">
-                        <rect key="frame" x="0.0" y="91" width="320" height="39"/>
+                        <rect key="frame" x="0.0" y="119" width="320" height="39"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iU1-DB-UNZ">
                                 <rect key="frame" x="0.0" y="8" width="155" height="22"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="22" id="X8Q-ju-4oM"/>
-                                    <constraint firstAttribute="width" constant="155" id="wz9-Kq-PWC"/>
+                                    <constraint firstAttribute="height" constant="22" id="5wz-l3-Sk5"/>
+                                    <constraint firstAttribute="width" constant="155" id="T8u-qP-whj"/>
                                 </constraints>
                                 <state key="normal" title=" Like" image="like_icon">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -61,8 +61,8 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g0X-9R-4q6">
                                 <rect key="frame" x="163" y="9" width="149" height="22"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="149" id="7Rn-et-xo7"/>
-                                    <constraint firstAttribute="height" constant="22" id="qF9-ox-wmF"/>
+                                    <constraint firstAttribute="height" constant="22" id="Obd-a2-uXP"/>
+                                    <constraint firstAttribute="width" constant="149" id="rkf-q7-5QO"/>
                                 </constraints>
                                 <state key="normal" title=" Comment" image="comment_icon">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -74,42 +74,62 @@
                         </subviews>
                         <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="g0X-9R-4q6" firstAttribute="centerY" secondItem="kW9-xb-YxO" secondAttribute="centerY" id="2ej-eQ-zRG"/>
-                            <constraint firstAttribute="height" constant="39" id="6kf-ke-Vtg"/>
-                            <constraint firstItem="iU1-DB-UNZ" firstAttribute="centerY" secondItem="kW9-xb-YxO" secondAttribute="centerY" id="F5P-2j-LO7"/>
-                            <constraint firstItem="iU1-DB-UNZ" firstAttribute="leading" secondItem="kW9-xb-YxO" secondAttribute="leading" id="REd-d5-TvQ"/>
-                            <constraint firstItem="g0X-9R-4q6" firstAttribute="trailing" secondItem="kW9-xb-YxO" secondAttribute="trailingMargin" id="uEk-Sv-NSQ"/>
+                            <constraint firstItem="g0X-9R-4q6" firstAttribute="top" secondItem="kW9-xb-YxO" secondAttribute="top" constant="9" id="30i-Vm-48M"/>
+                            <constraint firstItem="iU1-DB-UNZ" firstAttribute="leading" secondItem="kW9-xb-YxO" secondAttribute="leading" id="7KB-he-o0n"/>
+                            <constraint firstItem="iU1-DB-UNZ" firstAttribute="top" secondItem="kW9-xb-YxO" secondAttribute="top" constant="8" id="87u-my-4ek"/>
+                            <constraint firstAttribute="trailing" secondItem="g0X-9R-4q6" secondAttribute="trailing" constant="8" id="EAq-Xd-FxQ"/>
+                            <constraint firstAttribute="bottom" secondItem="iU1-DB-UNZ" secondAttribute="bottom" constant="9" id="Pgm-Ce-1Ps"/>
+                            <constraint firstAttribute="bottom" secondItem="g0X-9R-4q6" secondAttribute="bottom" constant="8" id="egF-07-sMK"/>
+                            <constraint firstItem="g0X-9R-4q6" firstAttribute="leading" secondItem="iU1-DB-UNZ" secondAttribute="trailing" constant="8" id="nze-6W-Fhv"/>
                         </constraints>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f4g-yi-fBa">
+                        <rect key="frame" x="16" y="90" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vrU-eb-hJK">
+                        <rect key="frame" x="192" y="85" width="112" height="30"/>
+                        <state key="normal" title="View Comments">
+                            <color key="titleColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </state>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="vrU-eb-hJK" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="09T-QO-Asl"/>
+                    <constraint firstAttribute="bottom" secondItem="kW9-xb-YxO" secondAttribute="bottom" constant="10.5" id="3pj-a3-Bqk"/>
                     <constraint firstItem="Yui-Ao-wch" firstAttribute="leading" secondItem="fQf-Tj-3kw" secondAttribute="trailing" constant="8" id="96n-zD-gTy"/>
                     <constraint firstItem="Yui-Ao-wch" firstAttribute="top" secondItem="94y-1O-qeO" secondAttribute="bottom" constant="8" id="Ahg-4g-pBb"/>
-                    <constraint firstItem="kW9-xb-YxO" firstAttribute="top" secondItem="fQf-Tj-3kw" secondAttribute="bottom" constant="20" id="DCi-Ie-1Pu"/>
+                    <constraint firstItem="kW9-xb-YxO" firstAttribute="top" secondItem="vrU-eb-hJK" secondAttribute="bottom" constant="4" id="FrN-gI-OqZ"/>
+                    <constraint firstAttribute="trailing" secondItem="kW9-xb-YxO" secondAttribute="trailing" id="GjQ-rO-vCy"/>
                     <constraint firstAttribute="trailingMargin" secondItem="94y-1O-qeO" secondAttribute="trailing" constant="37" id="Hcc-4H-XfG"/>
                     <constraint firstItem="fQf-Tj-3kw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="NB1-ps-8aw"/>
                     <constraint firstItem="fQf-Tj-3kw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="NCS-LK-izH"/>
                     <constraint firstItem="94y-1O-qeO" firstAttribute="leading" secondItem="fQf-Tj-3kw" secondAttribute="trailing" constant="8" id="NP7-u5-0cl"/>
-                    <constraint firstItem="kW9-xb-YxO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="PWg-Yd-CoO"/>
                     <constraint firstItem="94y-1O-qeO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="R7v-o5-wNO"/>
                     <constraint firstItem="Yui-Ao-wch" firstAttribute="top" secondItem="94y-1O-qeO" secondAttribute="bottom" constant="8" id="Sry-vq-vxb"/>
+                    <constraint firstItem="kW9-xb-YxO" firstAttribute="top" secondItem="f4g-yi-fBa" secondAttribute="bottom" constant="8" id="UrQ-Vk-Ce1"/>
                     <constraint firstItem="94y-1O-qeO" firstAttribute="leading" secondItem="fQf-Tj-3kw" secondAttribute="trailing" constant="8" id="VKC-eq-YR7"/>
-                    <constraint firstAttribute="trailing" secondItem="kW9-xb-YxO" secondAttribute="trailing" id="bBP-vB-UjQ"/>
-                    <constraint firstItem="kW9-xb-YxO" firstAttribute="top" secondItem="Yui-Ao-wch" secondAttribute="bottom" constant="8" id="nu7-kA-ZR7"/>
-                    <constraint firstAttribute="bottom" secondItem="kW9-xb-YxO" secondAttribute="bottom" constant="10.5" id="ox6-cX-ZeA"/>
-                    <constraint firstItem="kW9-xb-YxO" firstAttribute="top" secondItem="Yui-Ao-wch" secondAttribute="bottom" constant="8" id="qGP-6p-9UV"/>
+                    <constraint firstItem="f4g-yi-fBa" firstAttribute="top" secondItem="fQf-Tj-3kw" secondAttribute="bottom" constant="19" id="dLG-M5-9pL"/>
+                    <constraint firstItem="vrU-eb-hJK" firstAttribute="top" secondItem="Yui-Ao-wch" secondAttribute="bottom" constant="24.5" id="gmj-m7-T70"/>
+                    <constraint firstItem="f4g-yi-fBa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="lRM-rK-j2K"/>
+                    <constraint firstItem="kW9-xb-YxO" firstAttribute="top" secondItem="fQf-Tj-3kw" secondAttribute="bottom" constant="48" id="qYR-vg-cZT"/>
                     <constraint firstAttribute="trailingMargin" secondItem="Yui-Ao-wch" secondAttribute="trailing" constant="14" id="skx-Pc-mZ1"/>
+                    <constraint firstItem="kW9-xb-YxO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="ylD-R8-5eo"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="commentButton" destination="g0X-9R-4q6" id="9O2-qu-GwX"/>
                 <outlet property="likeButton" destination="iU1-DB-UNZ" id="5xN-Q5-J52"/>
+                <outlet property="likesLabel" destination="f4g-yi-fBa" id="IhL-Jr-7hr"/>
                 <outlet property="nameOfUser" destination="94y-1O-qeO" id="059-Ai-ySw"/>
                 <outlet property="profilePicture" destination="fQf-Tj-3kw" id="dfp-ln-AKy"/>
                 <outlet property="textBody" destination="Yui-Ao-wch" id="rWB-hn-bir"/>
+                <outlet property="viewCommentsButton" destination="vrU-eb-hJK" id="cuD-0l-hO2"/>
             </connections>
-            <point key="canvasLocation" x="107" y="171.5"/>
+            <point key="canvasLocation" x="107" y="185.5"/>
         </tableViewCell>
     </objects>
     <resources>
