--- a/EagleSocial/CommentCell.xib
+++ b/EagleSocial/CommentCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,7 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="72" id="KGk-i7-Jjw" customClass="CommentCell" customModule="EagleSocial" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCommentCell" rowHeight="72" id="KGk-i7-Jjw" customClass="CommentCell" customModule="EagleSocial" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="72"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -29,7 +29,7 @@
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dsy-Rv-qUo">
                         <rect key="frame" x="74" y="11" width="230" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -41,18 +41,16 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Dsy-Rv-qUo" firstAttribute="leading" secondItem="S4V-q8-M0H" secondAttribute="trailing" constant="8" id="9Te-My-GZq"/>
-                    <constraint firstItem="Dsy-Rv-qUo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="9UE-LD-ekR"/>
-                    <constraint firstItem="ecv-Ly-vrc" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="Azo-DC-GvJ"/>
-                    <constraint firstItem="Dsy-Rv-qUo" firstAttribute="leading" secondItem="S4V-q8-M0H" secondAttribute="trailing" constant="8" id="I2V-0l-fpZ"/>
+                    <constraint firstItem="ecv-Ly-vrc" firstAttribute="top" secondItem="Dsy-Rv-qUo" secondAttribute="bottom" constant="8" id="3jr-CP-NCg"/>
+                    <constraint firstItem="Dsy-Rv-qUo" firstAttribute="leading" secondItem="S4V-q8-M0H" secondAttribute="trailing" constant="8" id="CFf-kB-IYt"/>
                     <constraint firstItem="S4V-q8-M0H" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="J1b-Ch-SM1"/>
-                    <constraint firstItem="ecv-Ly-vrc" firstAttribute="leading" secondItem="S4V-q8-M0H" secondAttribute="trailing" constant="8" id="N5N-qU-25u"/>
+                    <constraint firstItem="ecv-Ly-vrc" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="L1k-p3-eSu"/>
                     <constraint firstItem="S4V-q8-M0H" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="Trd-7a-cDC"/>
-                    <constraint firstItem="ecv-Ly-vrc" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="eAD-Xc-Vof"/>
+                    <constraint firstItem="ecv-Ly-vrc" firstAttribute="leading" secondItem="S4V-q8-M0H" secondAttribute="trailing" constant="8" id="Yw1-ry-LPI"/>
+                    <constraint firstItem="ecv-Ly-vrc" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="cUG-J7-U75"/>
+                    <constraint firstItem="Dsy-Rv-qUo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="dUm-Ge-V7M"/>
                     <constraint firstItem="S4V-q8-M0H" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="eBp-hy-Fwy"/>
-                    <constraint firstItem="Dsy-Rv-qUo" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="lVY-fb-1Ub"/>
-                    <constraint firstItem="ecv-Ly-vrc" firstAttribute="top" secondItem="Dsy-Rv-qUo" secondAttribute="bottom" constant="8" id="rcp-Ee-tPS"/>
-                    <constraint firstItem="ecv-Ly-vrc" firstAttribute="top" secondItem="Dsy-Rv-qUo" secondAttribute="bottom" constant="8" id="xdS-a8-fx0"/>
+                    <constraint firstItem="Dsy-Rv-qUo" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="rCt-Tc-xFH"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
